--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,10 @@
 ACLOCAL_AMFLAGS=-I m4
 plugindir=@rofi_PLUGIN_INSTALL_DIR@
 
-plugin_LTLIBRARIES = extended.la
+plugin_LTLIBRARIES = blocks.la
 
 extended_la_SOURCES=\
-		 src/extended.c
+		 src/blocks.c
 
 extended_la_CFLAGS= @glib_CFLAGS@ @rofi_CFLAGS@
 extended_la_LIBADD= @glib_LIBS@ @rofi_LIBS@
