src: add render_state to keep information of rofi state

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ plugin_LTLIBRARIES = blocks.la
 blocks_la_SOURCES=\
 		 src/blocks.c \
 		 src/string_utils.c \
-		 src/json_glib_extensions.c
+		 src/json_glib_extensions.c \
+		 src/render_state.c
 
 blocks_la_CFLAGS= @glib_CFLAGS@ @rofi_CFLAGS@
 blocks_la_LIBADD= @glib_LIBS@ @rofi_LIBS@
