src: Refactor PageData to a separate file, use SPDX-License-Identifier
- Refactor PageData to a separate file

- use SPDX-License-Identifier to simplify license text

- Liense under GPLv3

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ blocks_la_SOURCES=\
 		 src/blocks.c \
 		 src/string_utils.c \
 		 src/json_glib_extensions.c \
+		 src/page_data.c \
 		 src/render_state.c
 
 blocks_la_CFLAGS= @glib_CFLAGS@ @rofi_CFLAGS@
