build: setup UI tests
- move unit tests to ./test/unit/

- create  ./test/ui/

- setup UI  tests

- add "rofi should open blocks modi correctly" UI test

- add "active entry should work on first paint"

- add xvfb and imagemagick on github action

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: meson gcovr libjson-glib-1.0-0 libjson-glib-dev rofi rofi-dev valgrind
+          packages: meson gcovr libjson-glib-1.0-0 libjson-glib-dev rofi rofi-dev valgrind xvfb libpng-dev libjpeg-dev libtiff-dev imagemagick
           version: 1.0
       - uses: actions/setup-node@v4
         with:
